# nodex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  run_gui.sh  run_tests.sh
app/: CMakeLists.txt
app/include/: Application.h  Constants.h  Gui.h  GuiNodes.h  NodeGraphWindow.h  Serializer.h
app/src/: Application.cpp  Gui.cpp  GuiNodes.cpp  Serializer.cpp  main.cpp
bindings/: CMakeLists.txt
bindings/python/src/: module.cpp
core/: CMakeLists.txt
core/include/: Core.h  Filter.h  FilterEigen.h  Node.h  Utils.h
core/include/core/: NoddyCore.h
core/src/: Core.cpp  Filter.cpp  NoddyCore.cpp  Node.cpp  Utils.cpp
examples/: test_lfilter.py  test_lfilter_multi.py
tests/: CMakeLists.txt
tests/src/: test_core.cpp  test_filter.cpp  test_filterDesign.cpp  test_lfilter.cpp  test_pybind11.cpp  test_zpk2tf.cpp
